# hadoopscope

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mock  Makefile  README.md  RUNBOOK-TEST.md  STARTER_PROMPT.md  applog.py  bootstrap.py  cluster_status.py  config.py  debug.py  docker-compose.yml  hadoopscope.py  install.sh  mkdocs.yml  pyproject.toml  tuxbox.toml
.claude/sessions/: session_2026-02-26_18-36.md
.github/workflows/: pages.yml  tests.yml
alerts/: email_alert.py  log_alert.py  webhook_alert.py  zabbix_alert.py
checks/: ambari.py  base.py  cloudera.py  hive.py  webhdfs.py  yarn.py
config/: .env.example  docker-test.yaml  example.yaml  test.yaml
docs/: alerts.md  architecture.md  cli.md  index.md
docs/checks/: ambari.md  cloudera.md  hdfs.md  hive.md  overview.md  yarn.md
docs/dev/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
tests/: mock_api_server.py  run_all.py  test_applog.py  test_base.py  test_checks.py  test_config.py
tests/fixtures/: ambari_services_critical.json  ambari_services_ok.json  cloudera_services_ok.json  jmx_namenode_dead_dn.json  jmx_namenode_ok.json  namenode_ha_no_active.json  namenode_ha_ok.json  yarn_nodes_lost_decom.json  yarn_nodes_ok.json  yarn_nodes_unhealthy.json
